# PathFinder_LCD

./: .gitignore  2.1寸tft圆形液晶屏lcd显示屏RGB888接口ST7701提供ESP32参考例程-淘宝网.html  README.md
.qoder/repowiki/knowledge/zh/: _index.yaml
.qoder/repowiki/zh/content/: LED控制系统.md  快速开始.md  故障排除指南.md  项目概述.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
2.1寸tft圆形液晶屏lcd显示屏RGB888接口ST7701提供ESP32参考例程-淘宝网_files/: data-loader.js  font_4480420_xqnj9hj7amr.css  index(1).js  kissy-search-suggest-iframe.html  main.js  p_home.css  p_home.js  sns_logo  sns_logo(1)  storepopup.css
AcousticEye/AcousticEye/: CMakeLists.txt  alter_file.md  library.properties
AcousticEye/AcousticEye/main/: CMakeLists.txt  idf_component.yml  main.c  ws2812.c  ws2812.h
PathFinder_Dashboard/: README.md  pubspec.yaml
PathFinder_Dashboard/android/: build.gradle.kts  settings.gradle.kts
PathFinder_Dashboard/android/app/: build.gradle.kts
PathFinder_Dashboard/lib/: main.dart
PathFinder_Dashboard/lib/app/: app.dart
PathFinder_Dashboard/test/: widget_test.dart
PathFinder_EMOTE/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
PathFinder_EMOTE/main/: CMakeLists.txt  Kconfig.projbuild  app_emote_assets.c  app_emote_assets.h  ble_gatt_server.c  ble_gatt_server.h  emote_engine.c  emote_engine.h  flight_instruments.c  flight_instruments.h  font_hzk_16.c  font_hzk_16.h  font_hzk_32.h  idf_component.yml  main.c  mesh_espnow.c  mesh_node.c  mesh_node.h  motion_engine.c  motion_engine.h  provision_screen.c  provision_screen.h  sensor_manager.c  sensor_manager.h  subtitle_view.c  subtitle_view.h  web_portal.c  web_portal.h  wifi_config_manager.c  wifi_config_manager.h
PathFinder_EMOTE/main/drivers/: drv_aht20.c  drv_aht20.h  drv_bmp280.c  drv_bmp280.h  drv_hmc5883l.c  drv_hmc5883l.h  drv_mpu6050.c  drv_mpu6050.h  drv_mpu9250.c  drv_mpu9250.h  drv_qmc5883l.c  drv_qmc5883l.h  drv_uv_adc.c  drv_uv_adc.h
PathFinder_EMOTE/main/mesh_common/: mesh_protocol.h
PathFinder_Tracker/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
PathFinder_Tracker/components/es7210/: CMakeLists.txt  es7210.c  idf_component.yml
PathFinder_Tracker/main/: CMakeLists.txt  idf_component.yml  main.c  tracker_config.h  tracker_state_machine.c  tracker_state_machine.h
PathFinder_Tracker/main/audio/: sound_localizer.c  sound_localizer.h
PathFinder_Tracker/main/comm/: comm_link.c  comm_link.h  mesh_espnow.c  mesh_espnow.h  mesh_node.c  mesh_node.h  mesh_protocol.h  tracker_protocol.h
PathFinder_Tracker/main/drivers/: drv_es7210.c  drv_es7210.h  drv_servo.c  drv_servo.h  drv_uart_comm.c  drv_uart_comm.h  drv_ws2812.c  drv_ws2812.h
PathFinder_Tracker/main/vision/: drv_ov2640.c  drv_ov2640.h  face_detector.cpp  face_detector.h  face_tracker.c  face_tracker.h  vision_task.c  vision_task.h  web_viewer.c  web_viewer.h
docs/superpowers/plans/: 2026-07-12-esp32-wifi-provisioning.md  2026-07-12-pathfinder-dashboard.md  2026-07-16-pathfinder-tracker-phase1-2.md  2026-07-16-pathfinder-tracker-phase3.md
docs/superpowers/specs/: 2026-07-11-circular-screen-capsule-ui-redesign.md  2026-07-11-pathfinder-emote-phase1-implementation.md  2026-07-11-pathfinder-emote-sensor-emote-design.md  2026-07-12-esp32-wifi-provisioning-design.md  2026-07-12-esp32-wifi-provisioning-impl-report.md  2026-07-12-pathfinder-dashboard-flutter-design.md  2026-07-13-flight-instruments-design.md  2026-07-16-pathfinder-tracker-multimodal-design.md
xiaozhi-esp32/: sdkconfig.defaults  sdkconfig.defaults.esp32s3
xiaozhi-esp32/docs/: sound-localization.md
xiaozhi-esp32/main/: CMakeLists.txt  Kconfig.projbuild  application.cc  idf_component.yml
xiaozhi-esp32/partitions/v2/: 16m.csv
资料/ESP32开发板/: DXF_ESP32-S3-DevKitC-1_V1.1_20220429.dxf
资料/ESP32开发板/TK021F2699_ESP32_LVGL_GIF_LED/TK021F2699_ESP32_LVGL_GIF_LED/main/: CMakeLists.txt  LCD.c  rgb_lcd_example_main.c
资料/ESP32开发板/TK021F2699_ESP32_LVGL_GIF_LED/TK021F2699_ESP32_LVGL_GIF_LED/main/fonts/: ui_font_Alibaba_PuHuiTi_Font_48.c
资料/ESP32开发板/TK021F2699_ESP32_LVGL_GIF_LED/TK021F2699_ESP32_LVGL_GIF_LED/main/gif/: minions_0.c
资料/ESP32开发板/TK021F2699_ESP32_LVGL_GIF_LED/TK021F2699_ESP32_LVGL_GIF_LED/main/images/: ui_img_1370113610.c  ui_img_1836530665.c  ui_img_559735659.c  ui_img_608756609.c
资料/ESP32开发板/TK021F2699_ESP32_LVGL_GIF_LED/TK021F2699_ESP32_LVGL_GIF_LED/main/ui/: lvgl_demo_ui.c  lvgl_gif_demo.c
资料/ESP32开发板/TK021F2699_ESP32_LVGL_GIF_LED/TK021F2699_ESP32_LVGL_GIF_LED/main/wifi/: esp32wifi.c  esp32wifi.h
资料/TK021F2699整理资料/: TK021F2699_3D文件.STEP  TK021F2699_CTP_3D文件.STEP
资料/TK021F2699整理资料/ESP32_TK021F7343_LVGL_circle_UI/: 说明.txt
资料/TK021F2699整理资料/ESP32_TK021F7343_LVGL_circle_UI/ESP32_TK021F7343_LVGL_circle_UI/main/: CMakeLists.txt  lvgl_demo_ui.c  main.c
资料/TK021F2699整理资料/ESP32_TK021F7343_LVGL_circle_UI/ESP32_TK021F7343_LVGL_circle_UI/main/LCD/: LCD.c
资料/TK021F2699整理资料/ESP32_TK021F7343_LVGL_circle_UI/ESP32_TK021F7343_LVGL_circle_UI/main/images/: ui_img_1413029994.c  ui_img_2128317734.c  ui_img_534919753.c
资料/TK021F2699整理资料/LTDC LCD（RGB屏）_TK021F2699基于正点原子apollo F429开发板/: 正点原子接线定义.txt
资料/TK021F2699整理资料/TK021F2699_ESP32_LVGL_circle_UI/: sdkconfig  sdkconfig.old
资料/TK021F2699整理资料/TK021F2699_adapter_SCH_PCB_16bit/: ProPrj_TK021F2699_16位RGB转接板_2026-01-29.epro2
资料/TK021F2699整理资料/TK021F7343_adapter_SCH_PCB_16bit/: TK021F7343_16位RGB转接板_嘉立创EDA.epro2
(+953 files in other folders)
