idf_component_register(
    SRCS
        "main.c"
        "LCD.c"
        "app_emote_assets.c"
        "drivers/drv_aht20.c"
        "drivers/drv_bmp280.c"
        "drivers/drv_mpu9250.c"
        "drivers/drv_uv_adc.c"
        "sensor_manager.c"
        "motion_engine.c"
        "emote_engine.c"
        "ble_gatt_server.c"
        "wifi_config_manager.c"
        "web_portal.c"
        "provision_screen.c"
        "flight_instruments.c"
        "mesh_common/mesh_protocol.c"
        "mesh_espnow.c"
        "mesh_node.c"
    INCLUDE_DIRS
        "."
        "drivers"
        "mesh_common"
    REQUIRES
        esp_driver_gpio
        esp_driver_i2c
        esp_adc
        esp_lcd
        esp_timer
        nvs_flash
        bt
        esp_wifi
        esp_http_server
        esp_event
        esp_netif
)