idf_component_register(
    SRCS
        "main.c"
        "drivers/drv_es7210.c"
        "drivers/drv_ws2812.c"
        "audio/sound_localizer.c"
    INCLUDE_DIRS
        "."
        "drivers"
        "audio"
        "comm"
    REQUIRES
        esp_driver_gpio
        esp_driver_i2c
        esp_driver_i2s
        esp_driver_uart
        esp_driver_ledc
        esp_timer
        nvs_flash
        es7210
        led_strip
)
