idf_component_register(
    SRCS
        "main.c"
        "tracker_state_machine.c"
        "drivers/drv_es7210.c"
        "drivers/drv_servo.c"
        "drivers/drv_ws2812.c"
        "drivers/drv_uart_comm.c"
        "audio/sound_localizer.c"
        "vision/drv_ov2640.c"
        "vision/face_detector.cpp"
        "vision/face_tracker.c"
        "vision/vision_task.c"
        "comm/mesh_protocol.c"
        "comm/mesh_espnow.c"
        "comm/mesh_node.c"
        "comm/comm_link.c"
    INCLUDE_DIRS
        "."
        "drivers"
        "audio"
        "comm"
        "vision"
    REQUIRES
        esp_driver_gpio
        esp_driver_i2c
        esp_driver_i2s
        esp_driver_uart
        esp_driver_ledc
        esp_timer
        nvs_flash
        es7210
        led_strip
        esp_wifi
        esp_netif
        esp_event
)
