idf_component_register(SRCS "rgb_lcd_example_main.c" 
                            "ui/lvgl_demo_ui.c" 
                            "ui/lvgl_gif_demo.c"
                            "LCD.c"
                            "images/ui_img_534919753.c"
                            "images/ui_img_1063244380.c"
                            "images/ui_img_1413029994.c"
                            "images/ui_img_1663005091.c"
                            "images/ui_img_2128317734.c"
                            "images/ui_img_559735659.c"
                            "images/ui_img_608756609.c"
                            "images/ui_img_1836530665.c"
                            "images/ui_img_1301454848.c"
                            "images/ui_img_1152878764.c"
                            "images/ui_img_1370113610.c"
                            "fonts/ui_font_Alibaba_PuHuiTi_Font_14.c"
                            "fonts/ui_font_Alibaba_PuHuiTi_Font_20.c"
                            "fonts/ui_font_Alibaba_PuHuiTi_Font_32.c"
                            "fonts/ui_font_Alibaba_PuHuiTi_Font_48.c"
                            "wifi/esp32wifi.c"
                            "gif/crayon_xiao_xin.c"
                            "gif/loading.c"
                            "gif/loading_bar.c"
                            "gif/minions_0.c"
                            "gif/minions_2.c"
                            "gif/minions_5.c"
                            "led_ws2812/led_ws2812.c"
                       INCLUDE_DIRS "." "wifi" "led_ws2812")
